# tech-foundations-bootcamp

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
journal/: day-01.md
week01-02-patterns/java/: pom.xml
week01-02-patterns/java/src/main/java/com/osama/: App.java
week01-02-patterns/java/src/main/java/com/osama/singleton/: Config.java
week01-02-patterns/java/src/test/java/com/osama/: AppTest.java
week01-02-patterns/java/src/test/java/com/osama/singleton/: ConfigTest.java
week01-02-patterns/python/src/patterns/: singleton.py
week01-02-patterns/python/tests/: conftest.py  test_singleton.py
week05-containers/docker/: Dockerfile
